--- a/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
@@ -1,5 +1,5 @@
 <section #startMeeting>
-  <dialogue-turn [actor]="program?.ngo"
+  <dialogue-turn [actor]="self"
                  *ngIf="fspSubmitted"
                  [isSpoken]="fspSubmitted"
   >
@@ -25,7 +25,7 @@
                  submitLabel="validation.validate-fsp.submit"
     ></q-and-a-set>
 
-    <dialogue-turn [actor]="program?.ngo"
+    <dialogue-turn [actor]="self"
                    *ngIf="showResultSuccess"
                    [isSpoken]="showResultSuccess"
     >
@@ -33,7 +33,7 @@
         {{ 'validation.validate-fsp.conclusion'|translate }}
       </p>
     </dialogue-turn>
-    <dialogue-turn [actor]="program?.ngo"
+    <dialogue-turn [actor]="self"
                    *ngIf="showResultError"
                    [isSpoken]="showResultError"
     >
