--- a/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
@@ -37,7 +37,7 @@
       </ion-item>
 
       <confirm-prompt
-        [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer"
+        [disabled]="payoutDisabled(installment)"
         (confirm)="performPayout(installment); installment.isInProgress = true"
         (cancel)="cancelPayout(installment)"
         [subHeader]="'page.program.program-payout.total-amount'|translate"
