AB#2275 Replace QR-scanner component/configuration

--- a/interfaces/AW-App/src/app/validation-components/scan-qr/scan-qr.component.html
+++ b/interfaces/AW-App/src/app/validation-components/scan-qr/scan-qr.component.html
@@ -7,7 +7,7 @@
   >
     <ion-button expand="block"
                 [disabled]="paDataResult || returnMainMenu"
-                (click)="scanQrCode()">
+                (click)="doScan()">
       {{ 'validation.scan-qr.scan-button'|translate }}
     </ion-button>
     <ion-button expand="block"
