--- a/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
@@ -6,8 +6,7 @@
   <q-and-a-set [questions]="questions"
                [answers]="answers"
                [(isSubmitted)]="hasAnswered"
-               [(isEditing)]="hasChangedAnswers"
-               (submit)="submit($event)"
+               (submit)="submit()"
                submitLabel="validation.validate-program.submit"
   ></q-and-a-set>
 
