AB#2285 small feedback FSP-validation

--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -72,7 +72,7 @@
   >
     <dialogue-turn [isSpoken]="checkValidationErrors(question.code)">
       <p *ngIf="(question.answerType === answerType.phoneNumber) && validationErrors.includes('phoneNumber')">
-        {{ 'shared.validate-phoneNumber'|translate }}
+        {{ 'shared.validate-phone-number'|translate }}
       </p>
     </dialogue-turn>
   </div>
