--- a/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
@@ -1,8 +1,6 @@
 <section #startMeeting>
   <form *ngIf="questions?.length">
-    <dialogue-turn isConnected="true"
-                   isSpoken="true"
-    >
+    <dialogue-turn isSpoken="true">
       <p>
         {{ 'validation.validate-fsp.introduction'|translate }}
       </p>
@@ -16,42 +14,40 @@
                  submitLabel="validation.validate-fsp.submit"
     ></q-and-a-set>
 
-    <dialogue-turn [actor]="self"
-                   *ngIf="showResultSuccess"
+    <dialogue-turn *ngIf="showResultSuccess"
                    [isSpoken]="showResultSuccess"
     >
       <p>
         {{ 'validation.validate-fsp.conclusion'|translate }}
       </p>
     </dialogue-turn>
-    <dialogue-turn [actor]="self"
-                   *ngIf="showResultError"
+    <dialogue-turn *ngIf="showResultError"
                    [isSpoken]="showResultError"
     >
       <p>
-        {{ 'shared.validation-generc-error'|translate }}
+        {{ 'shared.validate-generic-error'|translate }}
       </p>
     </dialogue-turn>
   </form>
 
-  <dialogue-turn  [actor]="self"
-                  *ngIf="!fspQuestionAvailable"
-                  [isSpoken]="fspQuestionAvailable"
+  <dialogue-turn  *ngIf="!fspQuestionAvailable"
+                  [isSpoken]="!fspQuestionAvailable"
     >
     <p>
     {{ 'validation.validate-fsp.no-fsp'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn  [actor]="self"
-      *ngIf="backToMainMenu"
-      [isSpoken]="fspQuestionAvailable"
-    >
+  <dialogue-turn
+    actor="self"
+    *ngIf="backToMainMenu"
+    [isSpoken]="backToMainMenu"
+  >
     <ion-button (click)="doReload()"
                 expand="block"
                 style="flex-basis:100%;"
     >
-    {{ 'validation.validate-fsp.back-menu'|translate }}
+      {{ 'validation.validate-fsp.back-menu'|translate }}
     </ion-button>
-    </dialogue-turn>
+  </dialogue-turn>
 
 </section>
