Added is spoken things AB#2288

--- a/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
@@ -44,7 +44,7 @@
   </dialogue-turn>
   <dialogue-turn  [actor]="self"
       *ngIf="backToMainMenu"
-      [isSpoken]="fspQuestionAvailable"
+      [isSpoken]="backToMainMenu"
     >
     <ion-button (click)="doReload()"
                 expand="block"
