AB#2311 AB#2314 export component generic

--- a/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
@@ -12,10 +12,11 @@
     [phaseReady]="true"
   ></app-phase-next>
 
-  <app-export-inclusion
+  <app-export-list
     [programId]="programId"
     [userRole]="userRole"
-  ></app-export-inclusion>
+    [exportType]="enumExportType.included"
+  ></app-export-list>
 
   <app-program-people-affected 
     [programId]="programId" 
