AB#2313 export select-for-validation list

--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -12,6 +12,12 @@
     [phaseReady]="isReady"
   ></app-phase-next>
 
+  <app-export-list 
+    [programId]="programId" 
+    [userRole]="userRole" 
+    [exportType]="enumExportType.selectedForValidation"
+  ></app-export-list>
+
   <app-program-people-affected
     [programId]="programId"
     [userRole]="userRole"
