--- a/interfaces/AW-App/src/global.scss
+++ b/interfaces/AW-App/src/global.scss
@@ -10,12 +10,9 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
-
-.debugModal
-{
-    .modal-wrapper
-    {
-        height: 60%;
-        width: 50%;
-    }
+.debugModal {
+  .modal-wrapper {
+    height: 60%;
+    width: 50%;
+  }
 }
