--- a/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
+++ b/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
@@ -11,7 +11,14 @@
                 class="ion-no-padding ion-text-wrap"
                 [disabled]="option.disabled || optionSelected"
       >
-        <ion-label>{{ option.option }} <ion-badge *ngIf="option.counter">{{option.counter}}</ion-badge></ion-label>
+        <ion-label>
+          {{ option.option }}
+          &nbsp;
+          <ion-badge
+            *ngIf="option.counter"
+            style="vertical-align: text-bottom;"
+          >{{ option.counter }}</ion-badge>
+        </ion-label>
         <ion-radio value="{{ option.id }}"></ion-radio>
       </ion-item>
     </ion-radio-group>
