Fix condition for confirmation message

--- a/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
@@ -19,8 +19,8 @@
       {{ 'validation.validate-program.dob-feedback'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn *ngIf="hasAnswered && programCredentialIssued"
-                 [isSpoken]="hasAnswered"
+  <dialogue-turn *ngIf="hasAnswered || programCredentialIssued"
+                 [isSpoken]="hasAnswered || programCredentialIssued"
   >
     <p>
       {{ 'validation.validate-program.please-confirm'|translate }}
