AB#2678 use notification-comp in review-inclusion

--- a/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
@@ -18,6 +18,12 @@
     [exportType]="enumExportType.included"
   ></app-export-list>
 
+  <app-notification 
+    [programId]="programId" 
+    [userRole]="userRole" 
+    [notificationType]="enumNotificationType.include"
+  ></app-notification>
+
   <app-program-people-affected 
     [programId]="programId" 
     [userRole]="userRole" 
