--- a/interfaces/HO-Portal/src/app/program/notification/notification.component.html
+++ b/interfaces/HO-Portal/src/app/program/notification/notification.component.html
@@ -1,8 +1,13 @@
-<confirm-prompt 
-  [disabled]="disabled" 
-  (confirm)="notify()" 
-  [subHeader]="subHeader"
->
-  <ion-icon name="call" slot="start"></ion-icon>
-  {{ btnText }}
-</confirm-prompt>
+<span style="display:inline-block; text-align:left">
+  <confirm-prompt 
+    [disabled]="disabled"
+    (confirm)="notify()"
+    [subHeader]="subHeader"
+  >
+    <ion-icon name="call" slot="start"></ion-icon>
+    {{ btnText }}
+  </confirm-prompt>
+  <ion-note *ngIf="timestamp" style="display:block">
+    {{ 'page.program.notification.timestamp'|translate }} {{ timestamp }}
+  </ion-note>
+</span>
