--- a/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
+++ b/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
@@ -8,6 +8,7 @@
   [disabled]="disabled"
   [placeholder]="placeholder"
   (ionInput)="onInput()"
+  (ionChange)="onChange()"
   ngDefaultControl
   required
 ></ion-input>
