--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -26,10 +26,11 @@
         </ion-radio-group>
       </div>
       <div *ngSwitchCase="answerType.Number">
-        <numeric-input ngDefaultControl
+        <numeric-input #numInput
+                       ngDefaultControl
                       [value]="answers[question.code]?.value"
                       [disabled]="isSubmitted"
-                      (ionChange)="onAnswerChange(question.code, $event.target.value)"
+                      (isValidChange)="onChangeWithValidation(question.code, numInput.value, numInput.isValid)"
                       debounce="300"
         ></numeric-input>
       </div>
@@ -71,6 +72,10 @@
       <p *ngIf="(question.answerType === answerType.phoneNumber) && validationErrors.includes('phoneNumber')">
         <play-text-audio key="validation.phoneNumber" class="ion-float-start ion-margin-end"></play-text-audio>
         {{ 'validation.phoneNumber'|translate }}
+      </p>
+      <p *ngIf="(question.answerType === answerType.Number)">
+        <play-text-audio key="validation.number" class="ion-float-start ion-margin-end"></play-text-audio>
+        {{ 'validation.number'|translate }}
       </p>
     </dialogue-turn>
   </div>
