--- a/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
@@ -68,8 +68,8 @@
                  [isSpoken]="hasValidationError"
   >
     <p>
-      <play-text-audio key="validation.phoneNumber" class="ion-float-start ion-margin-end"></play-text-audio>
-      {{ 'validation.phoneNumber'|translate }}
+      <play-text-audio key="personal.set-notification-number.validation.phone-number" class="ion-float-start ion-margin-end"></play-text-audio>
+      {{ 'personal.set-notification-number.validation.phone-number'|translate }}
     </p>
   </dialogue-turn>
   <dialogue-turn [actor]="ngo"
