--- a/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
@@ -10,6 +10,7 @@
                  [answers]="customAttributeAnswers"
                  [(isSubmitted)]="isSubmitted"
                  [(isEditing)]="isEditing"
+                 allQuestionsShown="true"
                  (submit)="saveCustomAttributes($event)"
                  submitLabel="validation.validate-fsp.submit"
     ></q-and-a-set>
