--- a/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
@@ -8,6 +8,7 @@
                [answers]="answers"
                [(isSubmitted)]="hasAnswered"
                [(isEditing)]="hasChangedAnswers"
+               allQuestionsShown="true"
                (submit)="submit()"
                submitLabel="validation.validate-program.submit"
   ></q-and-a-set>
