--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -61,6 +61,7 @@
                    type="text"
                    pattern=".*\S+.*"
                    [name]="question.code"
+                   [value]="answers[question.code]?.value"
                    [disabled]="isSubmitted"
                    (ionChange)="onChangeWithValidation(question.code, defaultInput.value, !(defaultInput.invalid && (defaultInput.dirty || defaultInput.touched)))"
                    debounce="300"
