--- a/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
@@ -26,7 +26,7 @@
                    [isSpoken]="showResultError"
     >
       <p>
-        {{ 'shared.validate-generic-error'|translate }}
+        {{ 'validation.validate-fsp.generic-error'|translate }}
       </p>
     </dialogue-turn>
   </form>
