--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -37,10 +37,14 @@
       <div *ngSwitchCase="answerType.Date">
         <ion-input type="date"
                    placeholder="dd-mm-yyyy"
+                   #dateInput="ngModel"
+                   [(ngModel)]="answerModels[question.code]"
+                   ngDefaultControl
+                   required
                    [name]="question.code"
                    [value]="answers[question.code]?.value"
                    [disabled]="isSubmitted"
-                   (ionChange)="onAnswerChange(question.code,$event.target.value)"
+                   (ionChange)="onChangeWithValidation(question.code, dateInput.value, !(dateInput.invalid && (dateInput.dirty || dateInput.touched)))"
                    debounce="100"
         ></ion-input>
       </div>
@@ -81,6 +85,10 @@
       <p *ngIf="(question.answerType === answerType.Number)">
         <play-text-audio key="q-and-a-set.validation.number" class="ion-float-start ion-margin-end"></play-text-audio>
         {{ 'q-and-a-set.validation.number'|translate }}
+      </p>
+      <p *ngIf="(question.answerType === answerType.Date)">
+        <play-text-audio key="q-and-a-set.validation.date" class="ion-float-start ion-margin-end"></play-text-audio>
+        {{ 'q-and-a-set.validation.date'|translate }}
       </p>
       <p *ngIf="(question.answerType === answerType.Text)">
         <play-text-audio key="q-and-a-set.validation.required" class="ion-float-start ion-margin-end"></play-text-audio>
