Add 'default' properties to custom input-fields

--- a/interfaces/PA-App/src/app/shared/phone-number-input/phone-number-input.component.html
+++ b/interfaces/PA-App/src/app/shared/phone-number-input/phone-number-input.component.html
@@ -6,10 +6,11 @@
            placeholder="+0 000 000 000"
            minlength="8"
            maxlength="17"
+           [name]="name"
            [value]="value"
            [disabled]="disabled"
            (ionChange)="onChange()"
            debounce="500"
            ngDefaultControl
-           required
+           [required]="required"
 ></ion-input>
