--- a/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
+++ b/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
@@ -3,6 +3,7 @@
   type="text"
   inputmode="numeric"
   pattern="[0-9]+"
+  [name]="name"
   [value]="value"
   [autocomplete]="autocomplete"
   [disabled]="disabled"
@@ -10,5 +11,5 @@
   (ionInput)="onInput()"
   (ionChange)="onChange()"
   ngDefaultControl
-  required
+  [required]="required"
 ></ion-input>
