Pass-through ngModels into custom input components

--- a/interfaces/AW-App/src/app/shared/numeric-input/numeric-input.component.html
+++ b/interfaces/AW-App/src/app/shared/numeric-input/numeric-input.component.html
@@ -4,6 +4,7 @@
   inputmode="numeric"
   pattern="[0-9]+"
   [name]="name"
+  [(ngModel)]="ngModel"
   [value]="value"
   [autocomplete]="autocomplete"
   [disabled]="disabled"
