--- a/interfaces/PA-App/src/app/shared/phone-number-input/phone-number-input.component.html
+++ b/interfaces/PA-App/src/app/shared/phone-number-input/phone-number-input.component.html
@@ -8,6 +8,7 @@
            maxlength="17"
            [name]="name"
            [value]="value"
+           [(ngModel)]="ngModel"
            [disabled]="disabled"
            (ionChange)="onChange()"
            debounce="500"
