--- a/interfaces/AW-App/src/app/shared/phone-number-input/phone-number-input.component.html
+++ b/interfaces/AW-App/src/app/shared/phone-number-input/phone-number-input.component.html
@@ -7,6 +7,7 @@
            minlength="8"
            maxlength="17"
            [name]="name"
+           [(ngModel)]="ngModel"
            [value]="value"
            [disabled]="disabled"
            (ionChange)="onChange()"
