--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -23,6 +23,7 @@
                [answers]="answers"
                [(isSubmitted)]="hasAnswered"
                [(isEditing)]="hasChangedAnswers"
+               [allQuestionsShown]="allQuestionsShown"
                (submit)="submit($event)"
                submitLabel="personal.enroll-in-program.submit"
   ></q-and-a-set>
