--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -36,7 +36,7 @@
       </ng-container>
       <ng-container *ngSwitchCase="allActors.ngoKRCS">
         <ion-avatar>
-          <img [alt]="actor" src="./assets/logos/krcs.png">
+          <img [alt]="actor" src="./assets/logos/krcs.jpg">
         </ion-avatar>
       </ng-container>
       <ng-container *ngSwitchDefault>
