AB#2785 Now the whole set uses a <form> we don't use the native submit (yet)

--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -120,7 +120,7 @@
   >
     <ion-row class="ion-nowrap ion-align-items-center">
       <ion-button
-        type="submit"
+        type="button"
         (click)="doSubmit()"
         [disabled]="isSubmitted"
         expand="block"
