--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -126,7 +126,7 @@
     <ion-row class="ion-nowrap ion-align-items-center">
       <play-text-audio [key]="submitLabel" size="default"></play-text-audio>
       <ion-button
-        type="submit"
+        type="button"
         (click)="doSubmit()"
         [disabled]="isSubmitted"
         expand="block"
