--- a/interfaces/HO-Portal/src/app/program/program-json/program-json.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-json/program-json.component.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{'page.program.program-modal.pageTitle' | translate}}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="closeModal()" [attr.title]="'common.cancel'|translate">
+        <ion-icon name="close" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
