--- a/interfaces/AW-App/src/app/shared/phone-number-input/phone-number-input.component.html
+++ b/interfaces/AW-App/src/app/shared/phone-number-input/phone-number-input.component.html
@@ -1,17 +1,18 @@
-<ion-input #telInput
-           type="tel"
-           inputmode="tel"
-           autocomplete="tel"
-           pattern="^\+?[0-9 \-\(\)]+"
-           placeholder="+0 000 000 000"
-           minlength="8"
-           maxlength="17"
-           [name]="name"
-           [(ngModel)]="ngModel"
-           [value]="value"
-           [disabled]="disabled"
-           (ionChange)="onChange()"
-           debounce="500"
-           ngDefaultControl
-           [required]="required"
+<ion-input
+  #telInput
+  type="tel"
+  inputmode="tel"
+  autocomplete="tel"
+  pattern="^\+?[0-9 \-\(\)]+"
+  placeholder="+0 000 000 000"
+  minlength="8"
+  maxlength="17"
+  [name]="name"
+  [(ngModel)]="ngModel"
+  [value]="value"
+  [disabled]="disabled"
+  (ionChange)="onChange()"
+  debounce="500"
+  ngDefaultControl
+  [required]="required"
 ></ion-input>
