--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -112,7 +112,7 @@
           {{ 'q-and-a-set.validation.date'|translate }}
         </p>
         <p *ngIf="(question.answerType === answerType.email)">
-          <!-- <play-text-audio key="q-and-a-set.validation.date" class="ion-float-start ion-margin-end"></play-text-audio> -->
+          <play-text-audio key="q-and-a-set.validation.date" class="ion-float-start ion-margin-end"></play-text-audio>
           {{ 'q-and-a-set.validation.email'|translate }}
         </p>
         <p *ngIf="(question.answerType === answerType.Text)">
